fix creating hacalc link

--- a/server/hacalc-root/Makefile
+++ b/server/hacalc-root/Makefile
@@ -6,7 +6,7 @@ EXETGT = ./hacalc-exe
 exe: $(EXETGT)
 
 $(EXETGT): build
-	ln -s "$(EXEPATH)" $(EXETGT)
+	ln -sf "$(EXEPATH)" $(EXETGT)
 
 build: $(BUILDTGT)
 
