--- a/server/src/package.json
+++ b/server/src/package.json
@@ -12,5 +12,7 @@
     "scripts": {
         "start": "node index.js"
     },
-    "dependencies": {}
+    "dependencies": {
+        "pg": "==8.2.1"
+    }
 }
